--- a/projects/front-components/src/lib/components/table/td/td.component.scss
+++ b/projects/front-components/src/lib/components/table/td/td.component.scss
@@ -2,7 +2,6 @@
 	height: 82px;
 	border-top: none;
 	border-right: 1px solid var(--border-primary);
-
 	border-bottom: 1px solid var(--border-primary);
 	border-left: none;
 
@@ -11,44 +10,47 @@
 	}
 }
 
+/* скрываем вертикальные разделители, если отключены бордеры */
 :host-context(table[ssTable]:not(.show-cell-borders)) {
 	:host:not(:last-child) {
 		border-right: none;
 	}
 }
 
+/* скругление для последней строки */
 :host-context(table[ssTable].has-border-radius) {
-	tbody tr:last-child :host:first-child {
-		border-bottom-left-radius: var(--border-radius-md);
-	}
+	tbody tr:last-child {
+		:host:first-child {
+			border-bottom-left-radius: var(--border-radius-md);
+		}
 
-	tbody tr:last-child :host:last-child {
-		border-bottom-right-radius: var(--border-radius-md);
-	}
-}
-
-:host-context(tr:hover) :host,
-:host-context(tr.dragging) :host,
-:host-context(tr.drag-over) :host {
-	border-color: transparent;
-}
-
-:host-context(tr:hover) :host,
-:host-context(tr.dragging) :host,
-:host-context(tr.drag-over) :host {
-	&:first-child {
-		border-left-color: var(--border-primary);
+		:host:last-child {
+			border-bottom-right-radius: var(--border-radius-md);
+		}
 	}
 }
 
-:host-context(tr:hover) :host,
-:host-context(tr.dragging) :host,
-:host-context(tr.drag-over) :host {
-	&:last-child {
-		border-right-color: var(--border-primary);
+/*  drag состояния */
+:host-context(tr.dragging),
+:host-context(tr.drag-over) {
+	:host {
+		border-color: transparent;
+
+		&:first-child {
+			border-left-color: var(--border-primary);
+		}
+
+		&:last-child {
+			border-right-color: var(--border-primary);
+		}
+
+		border-bottom-color: var(--border-primary);
 	}
 }
 
-:host-context(tr:last-child) :host {
-	border-bottom-color: var(--border-primary);
+/* нижний бордер у последней строки */
+:host-context(tr:last-child) {
+	:host {
+		border-bottom-color: var(--border-primary);
+	}
 }
