--- a/projects/test-app/src/app/table-oper-plan-example/table-oper-plan-example.component.scss
+++ b/projects/test-app/src/app/table-oper-plan-example/table-oper-plan-example.component.scss
@@ -12,7 +12,17 @@
 	border-spacing: 0;
 	table-layout: fixed;
 	transition: width 0.1s ease;
-	overflow-x: auto;
+	overflow: hidden;
+}
+
+.drag-action__content {
+	display: flex;
+	align-items: center;
+	gap: 15px;
+}
+
+.item-align--center {
+	justify-content: center;
 }
 
 .column-item__content {
@@ -24,17 +34,7 @@
 
 	&_label {
 		display: flex;
-		align-items: flex-start;
+		align-items: center;
 		gap: 8px;
 	}
-}
-
-.drag-action__content {
-	display: flex;
-	align-items: center;
-	gap: 15px;
-}
-
-.item-align--center {
-	justify-content: center;
 }
