--- a/projects/front-components/src/lib/components/text/text.component.html
+++ b/projects/front-components/src/lib/components/text/text.component.html
@@ -4,7 +4,7 @@
 	[class.line-clamp]="isLineClamp()"
 	[class.underline]="isUnderline()"
 	[class.white-space-nowrap]="isNoWrap()"
-	[style.color]="color()"
+	[style.color]="internalColor() || color()"
 	[style.text-align]="align()"
 	[style.-webkit-line-clamp]="getLineClampCount()"
 	[style.line-clamp]="getLineClampCount()"
