--- a/projects/front-components/src/lib/components/table/tr/tr.component.scss
+++ b/projects/front-components/src/lib/components/table/tr/tr.component.scss
@@ -3,7 +3,8 @@
 	background-color: var(--surface-primary);
 	transition: all 0.2s ease;
 
-	&:hover {
+	&:hover,
+	&.hovered {
 		background-color: var(--surface-action-hover-3) !important;
 	}
 
