--- a/projects/test-app/src/app/stand/stand.component.html
+++ b/projects/test-app/src/app/stand/stand.component.html
@@ -2232,7 +2232,7 @@
 
 		<p class="section-description">
 			Custom table components for data display with sticky columns in
-			draggable mode, scrollable and resizable
+			draggable mode, scrollable, resizable and hover on columns.
 		</p>
 
 		<div
