feature/3926_3994: nav-button, sidebar

--- a/projects/front-components/src/lib/components/dropdown/dropdown-item/dropdown-item.component.html
+++ b/projects/front-components/src/lib/components/dropdown/dropdown-item/dropdown-item.component.html
@@ -17,14 +17,14 @@
 						height="16"
 						width="16"
 						[icon]="icon()!"
-						[color]="iconColor()"
+						[color]="colorsConfig().icon"
 					></ss-lib-icon>
 				}
 
 				<ss-lib-text
 					[type]="TextType.BodySm"
 					[weight]="TextWeight.Medium"
-					[color]="textColor()"
+					[color]="colorsConfig().text"
 				>
 					{{ itemText() }}
 				</ss-lib-text>
