--- a/projects/front-components/src/lib/components/image-upload/image-upload.component.scss
+++ b/projects/front-components/src/lib/components/image-upload/image-upload.component.scss
@@ -28,6 +28,13 @@
 			display: none;
 		}
 	}
+
+	&__info {
+		display: flex;
+		align-items: center;
+		flex-direction: column;
+		gap: 4px;
+	}
 }
 
 .image-preview {
