--- a/projects/front-components/src/lib/components/spinner/spinner.component.scss
+++ b/projects/front-components/src/lib/components/spinner/spinner.component.scss
@@ -11,8 +11,8 @@
 
 .spinner {
 	border-radius: 50%;
-	animation: rotate 2s linear infinite;
 	max-width: 32px;
+	animation: rotate 1.6s linear infinite;
 	background: radial-gradient(
 		circle,
 		rgba(255, 255, 255, 0) 54%,
@@ -24,29 +24,27 @@
 	& .path {
 		stroke: var(--surface-action);
 		stroke-linecap: round;
-		animation: dash 1.5s ease-in-out infinite;
+		animation: dash 1.6s ease-in-out infinite;
 	}
 }
 
 @keyframes rotate {
-	100% {
+	to {
 		transform: rotate(360deg);
 	}
 }
 
 @keyframes dash {
 	0% {
-		stroke-dasharray: 1, 150;
+		stroke-dasharray: 10, 128;
 		stroke-dashoffset: 0;
 	}
-
 	50% {
-		stroke-dasharray: 90, 150;
-		stroke-dashoffset: -35;
+		stroke-dasharray: 80, 58;
+		stroke-dashoffset: -20;
 	}
-
 	100% {
-		stroke-dasharray: 90, 150;
-		stroke-dashoffset: -124;
+		stroke-dasharray: 10, 128;
+		stroke-dashoffset: -138;
 	}
 }
