feature/4143_3630: load-pagination

--- a/projects/front-components/src/lib/components/load-pagination/load-pagination.component.html
+++ b/projects/front-components/src/lib/components/load-pagination/load-pagination.component.html
@@ -1,12 +1,17 @@
 <div class="ss-lib-load-pagination">
 	<div class="ss-lib-load-pagination__button">
-		<ss-lib-button
-			*ngIf="viewButton"
-			[type]="ButtonType.Secondary"
-			[text]="TextComputedForLimit()"
-			(click)="addOffset()"
-		></ss-lib-button>
+		@if (canLoadMore) {
+			<ss-lib-button
+				[type]="ButtonType.Secondary"
+				[size]="ExtraSize.lg"
+				[text]="loadMoreText()"
+				[icon]="IconType.ArrowDown"
+				[iconPosition]="IconPosition.End"
+				(click)="updateOffset()"
+			></ss-lib-button>
+		}
 	</div>
+
 	<div class="ss-lib-load-pagination__block-progress">
 		<ss-lib-text
 			[color]="Colors.TextBody2"
@@ -14,6 +19,7 @@
 		>
 			{{ itemCount() }} из {{ total() }}
 		</ss-lib-text>
+
 		<ss-lib-progress
 			[current]="itemCount()"
 			[total]="total()"
