--- a/projects/test-app/src/app/stand/stand.component.html
+++ b/projects/test-app/src/app/stand/stand.component.html
@@ -2345,5 +2345,31 @@
 				></app-table-oper-plan-example>
 			</div>
 		</div>
+
+		<!-- Load Pagination -->
+		<div class="section">
+			<h2 class="section-title">Load Pagination</h2>
+			<p class="section-description">
+				Load pagination component with a <i>“Show more”</i> button and
+				progress indicator.
+			</p>
+
+			<div class="sub-section">
+				<div
+					class="component-row"
+					style="flex-direction: column"
+				>
+					<!-- Example 1 -->
+					<ss-lib-load-pagination
+						[total]="100"
+						[offsetInput]="0"
+						[limit]="20"
+						[itemCount]="40"
+					/>
+
+					<ss-lib-divider />
+				</div>
+			</div>
+		</div>
 	</div>
 </div>
