feature/3990 in progress

--- a/projects/front-components/src/lib/shared/styles/overlay.scss
+++ b/projects/front-components/src/lib/shared/styles/overlay.scss
@@ -1,12 +1,12 @@
-.ss-lib-overlay-backdrop {
+.ss-lib-popover-overlay-backdrop {
 	&--dark {
 		background-color: var(--surface-backdrop);
 		opacity: 70% !important;
 	}
 }
 
-.ss-lib-popup-global-scrolled {
+.ss-lib-popover-global-scrolled {
 	position: fixed;
 	overflow-y: auto;
-	pointer-events: auto;
+	pointer-events: auto !important;
 }
