feature/add_props_table: add styles to config

--- a/projects/front-components/src/lib/components/table/th/th.component.scss
+++ b/projects/front-components/src/lib/components/table/th/th.component.scss
@@ -4,6 +4,7 @@
 	position: relative;
 	border: 1px solid var(--border-primary);
 	cursor: default;
+	box-sizing: border-box;
 
 	border-left: none;
 
