--- a/projects/front-components/src/lib/components/header/header.component.html
+++ b/projects/front-components/src/lib/components/header/header.component.html
@@ -1,7 +1,7 @@
 <div class="ss-lib-header">
 	<div class="ss-lib-header__left">
 		<ss-lib-button
-			[size]="ExtraSize.md"
+			[size]="ExtraSize.lg"
 			[type]="ButtonType.Ghost"
 			[icon]="IconType.Burger"
 			[iconPosition]="IconPosition.OnlyIcon"
