--- a/projects/test-app/src/app/test-left-side-page/test-right-side-page.component.html
+++ b/projects/test-app/src/app/test-left-side-page/test-right-side-page.component.html
@@ -7,11 +7,5 @@
 >
 </ss-lib-right-side-page-popup>
 
-<ng-template #actions>
-	<ss-lib-modal-action-apply
-		[cancelText]="'Отмена'"
-		[applyText]="'Сохранить'"
-		(close)="close()"
-	></ss-lib-modal-action-apply>
-</ng-template>
+<ng-template #actions></ng-template>
 <ng-template #contentRef></ng-template>
