--- a/projects/front-components/src/lib/components/modal/modal.component.scss
+++ b/projects/front-components/src/lib/components/modal/modal.component.scss
@@ -13,7 +13,7 @@
 		display: flex;
 		flex-direction: column;
 		flex-grow: 1;
-		padding: 0 24px 32px 24px;
+		padding: 20px 24px 32px 24px;
 	}
 
 	&__footer {
@@ -30,7 +30,7 @@
 	}
 
 	&__divider-top {
-		padding: 20px 0;
+		padding-top: 12px;
 	}
 
 	&__divider-sticky {
