--- a/projects/front-components/src/lib/components/right-side-page-popup/right-side-page-popup.component.scss
+++ b/projects/front-components/src/lib/components/right-side-page-popup/right-side-page-popup.component.scss
@@ -11,7 +11,7 @@
 		display: flex;
 		flex-direction: column;
 		flex-grow: 1;
-		padding: 0 24px 32px 24px;
+		padding: 20px 24px 32px 24px;
 	}
 
 	&__footer {
@@ -24,10 +24,10 @@
 	}
 
 	&__actions {
-		padding: 25px 24px 24px 24px;
+		padding-top: 12px;
 	}
 
 	&__divider-top {
-		padding: 20px 0;
+		padding-top: 12px;
 	}
 }
