feature/3990 fix sidepage

--- a/projects/test-app/src/app/test-left-side-page/test-right-side-page.component.html
+++ b/projects/test-app/src/app/test-left-side-page/test-right-side-page.component.html
@@ -7,5 +7,7 @@
 >
 </ss-lib-right-side-page-popup>
 
-<ng-template #actions></ng-template>
-<ng-template #contentRef></ng-template>
+<ng-template #actions>
+	<ss-lib-button [text]="'Кнопка 1'"></ss-lib-button>
+</ng-template>
+<ng-template #contentRef> </ng-template>
